<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <TextView
        android:id="@+id/tvOnboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/tvOnboard"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/tvHelpTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvhelptasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/etEnterName"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:background="@drawable/graytextview"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/etEnterName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <EditText
        android:id="@+id/etEnterEmail"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:background="@drawable/graytextview"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/etEnterEmail"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:background="@drawable/graytextview"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/etEnterPassword"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:background="@drawable/graytextview"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/etConfirmPassword"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Theme.FigmaRegistro2"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:background="@drawable/initbutton"
        android:text="@string/btnRegister"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />
</androidx.constraintlayout.widget.ConstraintLayout>